@@ -1,3 +1,6 @@
+Wed Jun 17 18:20:53 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/iconv.c: fix iconv portability problem
+
 Fri Jun 12 10:53:39 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tds.h src/odbc/convert_tds2sql.c:
 	* src/odbc/unittests/data.c src/tds/convert.c src/tds/tds_checks.c:
@@ -1648,4 +1651,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2813 2009/06/12 08:53:49 freddy77 Exp $
+$Id: ChangeLog,v 1.2814 2009/06/17 16:20:59 freddy77 Exp $
